--- a/src/assets/scss/0_style.scss
+++ b/src/assets/scss/0_style.scss
@@ -6,8 +6,13 @@ a{
     display: inline-block;
 }
 .container {
-    max-width: 1100px;
+    max-width: 1200px;
     margin: 0 auto;
+}
+.container0Padding {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0;
 }
 body{
     margin: auto;
@@ -18,6 +23,9 @@ body{
     color: #000;
 }
 
+$mainColor : #69a2cd;
+$btnColor : #00a79d;
+
 @mixin btn {
-    
+
 }
