--- a/src/assets/scss/2_theBestChoice.scss
+++ b/src/assets/scss/2_theBestChoice.scss
@@ -26,17 +26,5 @@
     margin: 30px 0;
 }
 .theBestChoice__btn {
-    font-size: 20px;
-    background-color: $btnColor;
-    color: #fff;
-    padding: 15px;
-    font-weight: 700;
-    border-radius: 10px;
-    border: 1px solid transparent;
-    transition: .3s;
-    &:hover {
-        color: $btnColor;
-        background-color: #fff;
-        border: 1px solid $btnColor;
-    }
+    @include btn;
 }
