--- a/src/assets/scss/1_header.scss
+++ b/src/assets/scss/1_header.scss
@@ -29,7 +29,7 @@
 }
 .header__title {
     margin: 0;
-    font-size: 50px;
+    font-size: clamp(30px,5vw,50px);
     font-weight: 700;
     color: #47434b;
     text-transform: uppercase;
@@ -42,13 +42,13 @@
 
 }
 .header__price {
-    font-size: 35px;
+    font-size: clamp(21px,5vw,35px);
     font-weight: 600;
     color: #fff;
     padding: 15px 30px;
 }
 .header__ul {
-    font-size: 30px;
+    font-size: clamp(22px,5vw,30px);
     font-weight: 600;
     line-height: 60px;
     padding-left: 50px;
@@ -77,7 +77,7 @@
     width: 164px;
 }
 .header__reviews {
-    font-size: 27px;
+    font-size: clamp(21px,5vw,27px);
     font-weight: 600;
     margin: 0;
 }
