--- a/src/assets/scss/2_theBestChoice.scss
+++ b/src/assets/scss/2_theBestChoice.scss
@@ -8,6 +8,7 @@
     box-shadow: 0 0 30px 0 rgba(0,0,0,.10);
     padding: 40px 30px;
     border-radius: 10px;
+    border-bottom: 5px solid $btnColor;
 }
 .theBestChoice__left {
 }
