--- a/src/assets/scss/4_reviews.scss
+++ b/src/assets/scss/4_reviews.scss
@@ -13,6 +13,7 @@
     box-shadow: 0 0 30px 0 rgba(0,0,0,.10);
     padding: 40px 30px;
     border-radius: 10px;
+    border-bottom: 5px solid $btnColor;
 }
 .reviews__wrapper {
     background-color: #ffefe1;
