--- a/src/assets/scss/5_beforeAfter.scss
+++ b/src/assets/scss/5_beforeAfter.scss
@@ -13,6 +13,7 @@
     display: grid;
     grid-template-columns: repeat(2,1fr);
     gap: 30px;
+    border-bottom: 5px solid $btnColor;
 }
 .beforeAfter__imgW {
     max-width: 100%;
