--- a/src/assets/scss/6_recommendation.scss
+++ b/src/assets/scss/6_recommendation.scss
@@ -8,6 +8,7 @@
     display: grid;
     grid-template-columns: .8fr 1fr;
     gap: 20px;
+    border-bottom: 5px solid $btnColor;
 }
 .recommendation__left {
     display: flex;
