--- a/src/assets/scss/w_forms.scss
+++ b/src/assets/scss/w_forms.scss
@@ -5,6 +5,7 @@
     box-shadow: 0 0 30px 0 rgba(0,0,0,.10);
     padding: 40px 100px;
     border-radius: 10px;
+    border-bottom: 5px solid $btnColor;
 }
 .forms__title {
     text-align: center;
