--- a/src/assets/scss/x_btnFixed.scss
+++ b/src/assets/scss/x_btnFixed.scss
@@ -1,16 +1,43 @@
 .btnFixed {
-    display: none;
     position: fixed;
-    bottom: 0;
-    width: 100%;
-    padding: 0 1px;
-    margin-bottom: 10px;
+    bottom: 20px;
+    right: 10px;
 }
 .btnFixed__box {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
-.btnFixed__btn {
-    @include btn;
-    width: 100%;
-    text-align: center;
-    padding: 16px 15px;
+.btnFixed__tel__Wrap {
+}
+.btnFixed__tel {
+    outline: auto;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: $btnColor;
+    border: 1px solid transparent;
+    outline: none;
+    transition: .3s;
+    position: relative;
+    &:hover {
+        border: 1px solid $btnColor;
+        background-color: #fff;
+         &::before{
+            content: '';
+            position: absolute;
+            width: 16px;
+            height: 16px;
+            background-image: url(../icons/telephone.svg);
+        }
+    }
+}
+.btnFixed__imgT {
+}
+.btnFixed__W__Wrap {
+}
+.btnFixed__W {
 }
